{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "PlayerAction",
            "id": "c7c08b07-5cba-4b50-abb5-5c01afc3d36b",
            "actions": [
                {
                    "name": "RS",
                    "type": "PassThrough",
                    "id": "64714f2c-f5c8-482b-b966-62bddcae8836",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LB",
                    "type": "Button",
                    "id": "e63b093f-9726-4b85-bb74-3de509865ba9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RB",
                    "type": "Button",
                    "id": "6813115e-cb58-447f-b5be-f4fdd08e7e01",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LT",
                    "type": "Button",
                    "id": "b3a198d6-6078-4cff-84b1-2771c1500724",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RT",
                    "type": "Button",
                    "id": "98fb1fef-d7ee-4668-8473-f775b070582d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LS",
                    "type": "PassThrough",
                    "id": "10c2b811-a958-4c75-9fd8-b0e4d9a4b98d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "UpButton",
                    "type": "Button",
                    "id": "c653716d-f9be-4951-a012-f7bcbb634aa7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DownButton",
                    "type": "Button",
                    "id": "a5521bbb-8480-4c96-97cb-90b398f50e83",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "593ce459-c488-4dfe-b843-1de4daa19427",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RS",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f7045cf9-4e42-4fa6-a235-40e10f7579db",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1806688f-bd52-49b7-8f7a-5e3e9b127cfd",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3cb15f41-2fff-4b71-9ce2-834c8f6bece7",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LT",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62fa33ff-5bca-47a5-a1ce-b00846525775",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RT",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "54051cfd-8f0b-4bc9-a7d4-c07b2c0d76d6",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LS",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "74a73afe-392f-4a95-b1a1-13886fe11b13",
                    "path": "<XInputController>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f344573-6fd9-4ef0-8b18-bf66f418fe82",
                    "path": "<XInputController>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DownButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}