{
    "name": "playerInputActions",
    "maps": [
        {
            "name": "PlayerAction",
            "id": "7201d14a-819f-44ff-bb49-fa24cfd8056f",
            "actions": [
                {
                    "name": "LT",
                    "type": "Button",
                    "id": "cbc537b3-15c4-408f-94e1-7e34a6b1c388",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RT",
                    "type": "Button",
                    "id": "541af20f-f12b-4de7-abb0-0837e09a679c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LB",
                    "type": "Button",
                    "id": "3c159f25-bc5f-4b35-b704-8cd9a31fe36a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RB",
                    "type": "Button",
                    "id": "7492bc77-827d-4bdf-bd7d-307f390bbd48",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "KillSwitch",
                    "type": "Button",
                    "id": "9bc42a4b-a7d0-428a-b9a6-f22511f2f0da",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "UpButton",
                    "type": "Button",
                    "id": "d22f6bf8-9339-4c34-ac22-23257f2be700",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DownButton",
                    "type": "Button",
                    "id": "b78cc51b-ab05-49e2-8f96-86402b758f69",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LS",
                    "type": "PassThrough",
                    "id": "89da7412-4f38-44c9-9091-33b139e9559a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RS",
                    "type": "PassThrough",
                    "id": "542ea600-3a09-432f-bbd5-d0fff6a33804",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Push",
                    "type": "Button",
                    "id": "c71adbe7-ca12-449f-a399-6b52bac6f16b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ccc282b0-e900-4bba-8b6b-14bf5ae0c493",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LT",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fdb63209-63c2-4995-9321-b9372fc34aa9",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RT",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2325711d-c0f4-4cf7-bde1-407f060f17e5",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c933f321-68f8-4228-95ea-77bef1b6b6a5",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "814ec6bf-b567-4450-b9ab-29a19928c14b",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KillSwitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5ea96c94-68b7-41d0-b66f-8730dad14a35",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2a9b303a-a618-4524-8bbe-396f99a4852a",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DownButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0381ddaa-dbc3-44fc-a801-37be83d41672",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LS",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "98abdf15-29fc-4c14-b59f-f9e71cd52f2e",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RS",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1d799b68-91d4-42da-85ee-1527f8304d47",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Push",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}